<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings"
    android:background="@color/skyBlue"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        >

        <Button
            android:id="@+id/buttonAchievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/buttonYellow"
            android:textColor="@color/black"
            android:text="@string/btn_achievements" />

        <Button
            android:id="@+id/buttonStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/buttonYellow"
            android:textColor="@color/black"
            android:text="@string/btn_store" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/buttonYellow"
            android:textColor="@color/black"
            android:text="@string/btn_settings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:background="@drawable/border_green"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/lbl_settings" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="15dp"
            app:thumbTint="@color/buttonYellow"
            android:text="@string/sch_difficulty" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/sld_volume" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</RelativeLayout>