<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/skyBlue"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="260dp"
        android:orientation="vertical"
        android:background="@drawable/border_blue"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/game_choose_menu"
        >

        <Button
            android:id="@+id/buttonGameOne"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/menuGreen"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/btn_game1" />

        <Button
            android:id="@+id/buttonGameTwo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/menuGreen"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/btn_game2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        >

        <Button
            android:id="@+id/buttonAchievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/buttonYellow"
            android:textColor="@color/black"
            android:text="@string/btn_achievements" />

        <Button
            android:id="@+id/buttonStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/buttonYellow"
            android:textColor="@color/black"
            android:text="@string/btn_store" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/buttonYellow"
            android:textColor="@color/black"
            android:text="@string/btn_settings" />
    </LinearLayout>

</RelativeLayout>