<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/skyBlue"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_yellow"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/textViewGameOver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:textSize="48sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/lbl_game_over" />

        <TextView
            android:id="@+id/textViewPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/lbl_points" />

        <RelativeLayout
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="bottom"
            >

            <Button
                android:id="@+id/buttonRestart"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="20dp"
                app:cornerRadius="10dp"
                android:backgroundTint="@color/menuGreen"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/btn_restart" />

            <Button
                android:id="@+id/buttonMainMenu"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                app:cornerRadius="10dp"
                android:backgroundTint="@color/menuGreen"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/btn_main_menu" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>