<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/store"
    android:background="@color/skyBlue"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        >

        <Button
            android:id="@+id/buttonAchievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/buttonYellow"
            android:textColor="@color/black"
            android:text="@string/btn_achievements" />

        <Button
            android:id="@+id/buttonStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/buttonYellow"
            android:textColor="@color/black"
            android:text="@string/btn_store" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/buttonYellow"
            android:textColor="@color/black"
            android:text="@string/btn_settings" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:background="@drawable/border_green"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/lbl_store" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/buttonStupid"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonYellow"
            android:text="butt"
            android:layout_gravity="center"
            android:textColor="@color/black"
            app:cornerRadius="10dp" />


    </FrameLayout>

</RelativeLayout>